[gd_scene load_steps=3 format=3 uid="uid://5dgqw0ff842s"]

[ext_resource type="Script" path="res://UI.gd" id="1_pc7r6"]

[sub_resource type="Theme" id="Theme_vkqh4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pc7r6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Flashlight" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 588.0
offset_right = 408.0
offset_bottom = 628.0
theme = SubResource("Theme_vkqh4")
max_value = 50.0
step = 1.0
show_percentage = false

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="changed" from="Flashlight" to="." method="_on_flashlight_changed"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
